--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/swagger": "^3.0.2",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "mongoose": "^5.5.14",
     "passport": "^0.4.0",
@@ -32,7 +34,8 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "swagger-ui-express": "^4.0.6"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
